Fixed issue where sidebar was too short on pages other than the homepage.

--- a/public_html/wp-content/themes/carmel/style.css
+++ b/public_html/wp-content/themes/carmel/style.css
@@ -319,10 +319,13 @@ hr{
 #sidebar{
 	width:240px;
 	min-height:384px;
-	max-height: 386px;
 	background-color:#eaeae8;
 	padding:20px;
 	float:right;
+}
+
+div.home-page #sidebar {
+    max-height: 386px;
 }
 
 #sidebar.homesidebar {
